[tool.poetry]
name = "core-abao-test"
version = "0.1.0"
description = ""
authors = ["A-baoYang <rubyyang0615@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.9"
langchain-openai = "^0.0.7"
openai = "^1.12.0"
esg-toolkit = {git = "https://github.com/ESGTrans/esg_toolkit.git", rev = "main"}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
